--- a/pickmeup/src/main/res/layout/route_item.xml
+++ b/pickmeup/src/main/res/layout/route_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     card_view:cardPreventCornerOverlap="false"
+    android:clickable="true"
     card_view:cardUseCompatPadding="true"
     card_view:cardCornerRadius="4dp">
 
