--- a/pickmeup/src/main/res/layout/activity_signup.xml
+++ b/pickmeup/src/main/res/layout/activity_signup.xml
@@ -9,8 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:gravity="center"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".activity.SignUpActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <TextView android:text="@string/app_name"
         android:id="@+id/app_name_text"
@@ -18,14 +17,14 @@
 
     <!-- Name Label -->
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/signUp_name_til"
+        android:id="@+id/signup_name_til"
         android:layout_below="@id/app_name_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:errorEnabled="true">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/signUp_name_tiet"
+            android:id="@+id/signup_name_tiet"
             style="@style/loginEditText"
             android:hint="@string/name"/>
 
@@ -33,14 +32,14 @@
 
     <!-- username Label -->
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/signUp_username_til"
-        android:layout_below="@id/signUp_name_til"
+        android:id="@+id/signup_username_til"
+        android:layout_below="@id/signup_name_til"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:errorEnabled="true">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/signUp_username_tiet"
+            android:id="@+id/signup_username_tiet"
             style="@style/loginEditText"
             android:hint="@string/username"/>
 
@@ -48,14 +47,14 @@
 
     <!-- Password Label -->
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/signUp_password_til"
-        android:layout_below="@id/signUp_username_til"
+        android:id="@+id/signup_password_til"
+        android:layout_below="@id/signup_username_til"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:errorEnabled="true">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/signUp_password_tiet"
+            android:id="@+id/signup_password_tiet"
             style="@style/loginEditText"
             android:inputType="textPassword"
             android:hint="@string/password"/>
@@ -63,14 +62,14 @@
     </android.support.design.widget.TextInputLayout>
 
     <!-- Sign Up button -->
-     <android.support.v7.widget.AppCompatButton
-        android:id="@+id/signUp_btn"
+    <android.support.v7.widget.AppCompatButton
+        android:id="@+id/signup_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:theme="@style/loginButton"
         android:text="@string/sign_up"
-        android:onClick="signUp"
-        android:layout_below="@+id/signUp_password_til"
+        android:onClick="signup"
+        android:layout_below="@+id/signup_password_til"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
 
@@ -78,8 +77,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/backToLogin"
-        android:id="@+id/sign_up_backToLogin_txt"
-        android:layout_below="@+id/signUp_btn"
+        android:id="@+id/signup_backToLogin_txt"
+        android:layout_below="@+id/signup_btn"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:textColor="#ffffff" />
