--- a/pickmeup/src/main/res/layout/activity_home.xml
+++ b/pickmeup/src/main/res/layout/activity_home.xml
@@ -40,7 +40,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:tint="@android:color/white"
-        android:src="@drawable/ic_group_add"/>
+        android:src="@drawable/add_logo_selected"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
