--- a/pickmeup/src/main/res/layout/activity_login.xml
+++ b/pickmeup/src/main/res/layout/activity_login.xml
@@ -1,91 +1,100 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:gravity="center"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".activity.LoginActivity">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true">
 
-    <TextView android:text="@string/app_name"
-              android:id="@+id/app_name_text"
-              style="@style/loginHeader"/>
-
-    <!-- Username Label -->
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/username_til"
-        android:layout_below="@id/app_name_text"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true">
+        android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:gravity="center"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        tools:context=".activity.LoginActivity">
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/username_tiet"
-            style="@style/loginEditText"
-            android:hint="@string/username"/>
+        <TextView android:text="@string/app_name"
+            android:id="@+id/app_name_text"
+            style="@style/loginHeader"/>
 
-    </android.support.design.widget.TextInputLayout>
+        <!-- Username Label -->
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/username_til"
+            android:layout_below="@id/app_name_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
 
-    <!-- Password Label -->
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/password_til"
-        android:layout_below="@id/username_til"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorEnabled="true">
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/username_tiet"
+                style="@style/loginEditText"
+                android:hint="@string/username">
+                <requestFocus/>
+            </android.support.design.widget.TextInputEditText>
 
-        <android.support.design.widget.TextInputEditText
-            android:id="@+id/password_tiet"
-            style="@style/loginEditText"
-            android:inputType="textPassword"
-            android:hint="@string/password"/>
+        </android.support.design.widget.TextInputLayout>
 
-    </android.support.design.widget.TextInputLayout>
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/password_til"
+            android:layout_below="@id/username_til"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:errorEnabled="true">
 
+            <android.support.design.widget.TextInputEditText
+                android:id="@+id/password_tiet"
+                style="@style/loginEditText"
+                android:inputType="textPassword"
+                android:hint="@string/password"/>
 
-    <TextView android:id="@+id/forgot_username_password_link"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              style="@style/loginLink"
-              android:text="@string/forgot_login"
-              android:layout_below="@+id/password_til"
-              android:layout_alignParentLeft="true"
-              android:layout_alignParentStart="true"
-              android:onClick="forgot"/>
+        </android.support.design.widget.TextInputLayout>
+        <!-- Password Label -->
 
-    <TextView android:id="@+id/sign_up_link"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              style="@style/loginLink"
-              android:text="@string/sign_up"
-              android:layout_below="@+id/password_til"
-              android:layout_alignParentRight="true"
-              android:layout_alignParentEnd="true"/>
+        <android.support.v7.widget.AppCompatButton
+            android:id="@+id/login_btn"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/loginButton"
+            android:text="@string/login"
+            android:onClick="login"
+            android:layout_below="@+id/password_til"/>
 
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/login_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:theme="@style/loginButton"
-        android:text="@string/login"
-        android:onClick="login"
-        android:layout_below="@+id/forgot_username_password_link"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"/>
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Remember"
+            android:id="@+id/checkBoxRemember"
+            android:layout_below="@+id/login_btn"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
 
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Remember"
-        android:id="@+id/checkBoxRemember"
-        android:layout_below="@+id/forgot_username_password_link"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textColor="#ffffff"/>
+        <TextView android:id="@+id/forgot_username_password_link"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/loginLink"
+            android:text="@string/forgot_login"
+            android:layout_below="@+id/checkBoxRemember"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
+            android:onClick="forgot"/>
 
-</RelativeLayout>
+        <TextView android:id="@+id/sign_up_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/loginLink"
+            android:text="@string/sign_up"
+            android:layout_below="@+id/checkBoxRemember"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
+
+    </RelativeLayout>
+
+</ScrollView>
