--- a/pickmeup/src/main/res/values/styles.xml
+++ b/pickmeup/src/main/res/values/styles.xml
@@ -60,7 +60,7 @@
     <style name="loginHeader" parent="TextAppearance.AppCompat.Display2">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:layout_alignParentTop">true</item>
         <item name="android:layout_centerHorizontal">true</item>
     </style>
@@ -72,13 +72,13 @@
     </style>
 
     <style name="loginLink" parent="TextAppearance.AppCompat.Body1">
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:clickable">true</item>
         <item name="android:autoLink">all</item>
     </style>
 
     <style name="loginButton">
-        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="android:textColorPrimary">@color/colorPrimary</item>
     </style>
 
     <!-- Forgot Password -->
@@ -87,7 +87,7 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
     <style name="forgotPasswordText" parent="TextAppearance.AppCompat.Body1">
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
