--- a/pickmeup/src/main/res/layout/activity_route.xml
+++ b/pickmeup/src/main/res/layout/activity_route.xml
@@ -69,9 +69,23 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/passenger_max_capacity_til"
+                android:layout_below="@+id/cost_til"
+                app:errorEnabled="true"
+                style="@style/addRouteLabel">
+
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/passenger_max_capacity_tiet"
+                    style="@style/addRouteEditText"
+                    android:inputType="numberDecimal"
+                    android:hint="@string/passenger_quantity"/>
+
+            </android.support.design.widget.TextInputLayout>
+
             <TextView
                 android:id="@+id/payment_method_tv"
-                android:layout_below="@+id/cost_til"
+                android:layout_below="@+id/passenger_max_capacity_til"
                 android:textSize="12sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
